objects/Custom_Case_Audit__c.object
<CustomObject>
    <description>Captures field value change history</description>
    <label>Custom Case Audit</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Custom Case Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Case Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>TAT__c</fullName>
        <formula>(5 * ( FLOOR( ( End_Date__c - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ) ) / 7 ) ) + MIN( 5, MOD( End_Date__c - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ), 7 ) ) ) 
- 
(5 * ( FLOOR( ( Start_Date__c- DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ) ) / 7 ) ) + MIN( 5, MOD( Start_Date__c - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ), 7 ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Custom Case Audits</relationshipLabel>
        <relationshipName>Custom_Case_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Used for testing scalablity scenario.</description>
        <label>Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>CaseRef__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DX_CR_Status__c</fullName>
        <label>CR Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DX_CRF_Status__c</fullName>
        <label>CRF Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calc_CR_Status__c</fullName>
        <description>old formula:

IF(DX_CR_Status__c =&quot;&quot;,&quot;0-None&quot;,
IF(DX_CR_Status__c = &quot;Requirements Gathering&quot;,&quot;1-Requirements Gathering&quot;,
IF(DX_CR_Status__c = &quot;Pending Customer Approval&quot;,&quot;2-Pending Customer Approval&quot;,
IF(DX_CR_Status__c=&quot;Customer Approves Requirements&quot;,&quot;3-Customer Approves Requirements&quot;,
IF(DX_CR_Status__c = &quot;Ready to Assign to Engineer&quot;,&quot;4-Ready to Assign to Engineer&quot;,
IF(DX_CR_Status__c =&quot;In Progress with Engineer&quot;,&quot;5-In Progress with Engineer&quot;,
IF(DX_CR_Status__c=&quot;Pending Deployment (Turku DSS)&quot;,&quot;6-Pending Deployment (Turku DSS)&quot;,
IF(DX_CR_Status__c = &quot;Customer Validating&quot;,&quot;7-Customer Validating&quot;,
IF(DX_CR_Status__c = &quot;Go-Live (Akron DSS)&quot;,&quot;8-Go-Live (Akron DSS)&quot;,
&quot;9-Customer Acceptance Received&quot;)))))))))</description>
        <formula>IF(DX_CR_Status__c = &quot;None&quot;,&quot;0-None&quot;,
IF(DX_CR_Status__c = &quot;Requirements Gathering&quot;,&quot;1-Requirements Gathering&quot;,
IF(DX_CR_Status__c = &quot;Pending Customer Approval&quot;,&quot;2-Pending Customer Approval&quot;,
IF(DX_CR_Status__c=&quot;Customer Approves Requirements&quot;,&quot;3-Customer Approves Requirements&quot;,
IF(DX_CR_Status__c = &quot;Ready to Assign to Engineer&quot;,&quot;4-Ready to Assign to Engineer&quot;,
IF(DX_CR_Status__c =&quot;In Progress with Engineer&quot;,&quot;5-In Progress with Engineer&quot;,
IF(DX_CR_Status__c= &quot;Pending Deployment (Turku DSS)&quot;,&quot;6-Pending Deployment (Turku DSS)&quot;,
IF(DX_CR_Status__c = &quot;Customer Validating&quot;,&quot;7-Customer Validating&quot;,
IF(DX_CR_Status__c = &quot;Go-Live (Akron DSS)&quot;,&quot;8-Go-Live (Akron DSS)&quot;,
IF(DX_CR_Status__c = &quot;Customer Acceptance Received&quot;,
&quot;9-Customer Acceptance Received&quot;,&quot;&quot;))))))))))</formula>
        <label>Calc CR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_CR_Status__c</fullName>
        <label>Level 2 CR Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>